mega hyper commit de la mort qui tue